[gd_scene load_steps=17 format=2]

[ext_resource path="res://GameObjects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=2]
[ext_resource path="res://Assets/GameBG.png" type="Texture" id=3]
[ext_resource path="res://Assets/Music/winding path of scales.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Fonts/Silkscreen/Silkscreen-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://GameObjects/Button.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=12]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 12 )

[sub_resource type="DynamicFont" id=15]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 15 )

[sub_resource type="DynamicFont" id=13]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=14]
default_font = SubResource( 13 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[node name="GameManager" type="Node2D" groups=["gamemanager"]]
script = ExtResource( 2 )

[node name="Player" parent="." groups=["player"] instance=ExtResource( 1 )]
position = Vector2( -76, -52 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="GameUI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="GameStatus" type="Control" parent="GameUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="High" type="Label" parent="GameUI/GameStatus"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -116.0
margin_bottom = 21.0
theme = SubResource( 2 )
text = "High: 00000"

[node name="Current" type="Label" parent="GameUI/GameStatus"]
margin_right = 156.0
margin_bottom = 21.0
theme = SubResource( 2 )
text = "Current: 00000"

[node name="LifeExpectancy" type="Label" parent="GameUI/GameStatus"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -21.0
margin_right = 66.0
theme = SubResource( 2 )
text = "00.00"

[node name="GameOver" type="Control" parent="GameUI"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="GameUI/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.0431373, 0.0431373, 0.490196 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -57.0
margin_right = 83.0
margin_bottom = 49.0
theme = ExtResource( 6 )

[node name="ScoreLabel" type="Label" parent="GameUI/GameOver/VBoxContainer"]
margin_right = 165.0
margin_bottom = 21.0
theme = SubResource( 16 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GameOverLabel" type="Label" parent="GameUI/GameOver/VBoxContainer"]
margin_top = 25.0
margin_right = 165.0
margin_bottom = 56.0
theme = SubResource( 14 )
text = "GAME OVER!"
align = 1

[node name="RestartButton" type="Button" parent="GameUI/GameOver/VBoxContainer"]
margin_top = 60.0
margin_right = 165.0
margin_bottom = 81.0
text = "Restart"

[node name="Leaderboard" type="Button" parent="GameUI/GameOver/VBoxContainer"]
margin_top = 85.0
margin_right = 165.0
margin_bottom = 106.0
text = "Leaderboard"

[node name="QuitToMenuButton" type="Button" parent="GameUI/GameOver/VBoxContainer"]
margin_top = 110.0
margin_right = 165.0
margin_bottom = 131.0
text = "Quit To Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameUI/GameOver"]
anims/RESET = SubResource( 10 )
anims/appear = SubResource( 11 )

[node name="DeathMessage" type="Label" parent="GameUI/GameOver"]
anchor_left = 0.028125
anchor_top = 0.329167
anchor_right = 0.309375
anchor_bottom = 0.375
rect_rotation = -27.748
theme = SubResource( 7 )
text = "You bit yourself!"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NewHighscore" type="Control" parent="GameUI/GameOver"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/GameOver/NewHighscore"]
anchor_left = 6.0
anchor_top = 1.1
anchor_right = 7.21741
anchor_bottom = 2.86859
margin_right = 27.3038
margin_bottom = -30.7437
rect_rotation = 27.7
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NewHighscoreLabel" type="Label" parent="GameUI/GameOver/NewHighscore/VBoxContainer"]
margin_right = 76.0
margin_bottom = 11.0
theme = SubResource( 7 )
text = "New highscore!"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PrevHighscore" type="Label" parent="GameUI/GameOver/NewHighscore/VBoxContainer"]
margin_top = 15.0
margin_right = 76.0
margin_bottom = 26.0
theme = SubResource( 7 )
text = "prev:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WizardPositions" type="Node" parent="."]

[node name="Position2D" type="Position2D" parent="WizardPositions"]
position = Vector2( 124, -88 )

[node name="Position2D2" type="Position2D" parent="WizardPositions"]
position = Vector2( -120, -94 )

[node name="Position2D3" type="Position2D" parent="WizardPositions"]
position = Vector2( -144, 4 )

[node name="Position2D4" type="Position2D" parent="WizardPositions"]
position = Vector2( 148, 1 )

[node name="WarriorPositions" type="Node" parent="."]

[node name="Position2D" type="Position2D" parent="WarriorPositions"]
position = Vector2( -101, -168 )

[node name="Position2D2" type="Position2D" parent="WarriorPositions"]
position = Vector2( -18, -163 )

[node name="Position2D3" type="Position2D" parent="WarriorPositions"]
position = Vector2( 72, -160 )

[node name="Position2D4" type="Position2D" parent="WarriorPositions"]
position = Vector2( 152, -149 )

[node name="Position2D5" type="Position2D" parent="WarriorPositions"]
position = Vector2( 195, -84 )

[node name="Position2D6" type="Position2D" parent="WarriorPositions"]
position = Vector2( 204, -21 )

[node name="Position2D7" type="Position2D" parent="WarriorPositions"]
position = Vector2( -190, -164 )

[node name="Position2D8" type="Position2D" parent="WarriorPositions"]
position = Vector2( -230, -91 )

[node name="Position2D9" type="Position2D" parent="WarriorPositions"]
position = Vector2( -243, -8 )

[node name="Position2D10" type="Position2D" parent="WarriorPositions"]
position = Vector2( -234, 63 )

[node name="Position2D11" type="Position2D" parent="WarriorPositions"]
position = Vector2( 211, 50 )

[node name="SpawnWizardTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="SpawnWarriorTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="GameBg" type="Sprite" parent="."]
z_index = -100
texture = ExtResource( 3 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[connection signal="mouse_entered" from="GameUI/GameOver/VBoxContainer/RestartButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="GameUI/GameOver/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="mouse_entered" from="GameUI/GameOver/VBoxContainer/Leaderboard" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="GameUI/GameOver/VBoxContainer/Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="mouse_entered" from="GameUI/GameOver/VBoxContainer/QuitToMenuButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="GameUI/GameOver/VBoxContainer/QuitToMenuButton" to="." method="_on_QuitToMenuButton_pressed"]
[connection signal="timeout" from="SpawnWizardTimer" to="." method="_on_SpawnWizardTimer_timeout"]
[connection signal="timeout" from="SpawnWarriorTimer" to="." method="_on_SpawnWarriorTimer_timeout"]
